# pygv

./: LICENSE  README.md  deno.json  example.ipynb  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pygv/: __init__.py  _api.py  _browser.py  _config.py  _tracks.py  _version.py  _widget.py
src/pygv/static/: widget.css  widget.js
src/pyvg/: __init__.py  _api.py  _widget.py
tests/: test_pygv.py
