[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygv"
version = "0.0.0"
dependencies = ["anywidget>=0.9.3", "servir>=0.2.1", "msgspec>=0.18.6"]
readme = "README.md"

[dependency-groups]
dev = [
	"jupyterlab>=4.1.5",
	"ruff",
	"watchfiles>=0.21.0",
	"pytest",
]


[tool.hatch.envs.default.scripts]
lint = ["ruff check {args:.}", "ruff format --check --diff {args:.}"]
format = ["ruff format {args:.}", "ruff check --fix {args:.}"]
test = ["pytest {args:.}"]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
	"E",    # style errors
	"W",    # style warnings
	"F",    # flakes
	"D",    # pydocstyle
	"D417", # Missing argument descriptions in Docstrings
	"I",    # isort
	"UP",   # pyupgrade
	"C4",   # flake8-comprehensions
	"B",    # flake8-bugbear
	"A001", # flake8-builtins
	"RUF",  # ruff-specific rules
	"TCH",  # flake8-type-checking
	"TID",  # flake8-tidy-imports
]
ignore = [
	"D401", # First line should be in imperative mood (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]
