[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygv"
version = "0.0.0"
dependencies = ["anywidget>=0.9.3", "servir>=0.2.1", "msgspec>=0.18.6"]
readme = "README.md"

[dependency-groups]
dev = ["jupyterlab>=4.1.5", "ruff", "watchfiles>=0.21.0", "pytest"]

[tool.hatch.envs.default.scripts]
lint = ["ruff check {args:.}", "ruff format --check --diff {args:.}"]
format = ["ruff format {args:.}", "ruff check --fix {args:.}"]
test = ["pytest {args:.}"]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S", "PLR", "ANN"]
