[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygv"
version = "0.1.0"
dependencies = ["anywidget>=0.9.3", "servir>=0.2.1", "msgspec>=0.18.6"]
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "inline-snapshot>=0.17.1",
    "jupyterlab>=4.3.4",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = ["ALL"]
ignore = ["COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S", "PLR", "ANN"]
